--- a/fantasy/z-scores.ipynb
+++ b/fantasy/z-scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting unidecode\n",
+      "  Downloading Unidecode-1.1.1-py2.py3-none-any.whl (238 kB)\n",
+      "\u001b[K     |████████████████████████████████| 238 kB 2.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: unidecode\n",
+      "Successfully installed unidecode-1.1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +63,54 @@
     "df_c_19 = pd.read_csv(centers_19)\n",
     "df_c_18 = pd.read_csv(centers_18)\n",
     "df_c_17 = pd.read_csv(centers_17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.concat([df1, df2])\n",
+    "concat = pd.concat([df_g_19, df_f_19])\n",
+    "concatonated = pd.concat([concat, df_c_19])\n",
+    "ranking_2019 = concatonated.sort_values(by=[\"Z Total\"], ascending=False)\n",
+    "ranking_2019.drop([\"Unnamed: 0\"], axis=1)\n",
+    "ranking_2019.to_csv(\"output/ranking_2019.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unidecode\n",
+    "ranking_2019[\"Name\"] = ranking_2019[\"Name\"].astype(str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0      int64\n",
+       "Name           object\n",
+       "Pos            object\n",
+       "Z Total       float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranking_2019.dtypes"
    ]
   },
   {
